updated swagger annotation in adminController
